src/objects/ANG_BSP_Attributes__c.object
<CustomObject>
    <description>Object that stores the possible remittance frequency options for each Location Class by IATA ISO Country</description>
    <fields>
        <fullName>Amount_At_Risk_From_USD__c</fullName>
        <description>Amount at risk: FROM threshold. Used to determine in which tier the agency fall</description>
        <label>Amount At Risk - From (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_At_Risk_Multiplier__c</fullName>
        <defaultValue>1</defaultValue>
        <description>In the formula used to calculate RHC, it indicates How many time the Amount At Risk should be multiplied</description>
        <inlineHelpText>In the formula used to calculate RHC, it indicates How many time the Amount At Risk should be multiplied. Default value: 1</inlineHelpText>
        <label>Amount At Risk Multiplier</label>
        <precision>10</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_At_Risk_To_USD__c</fullName>
        <description>Amount at risk: TO threshold. Used to determine in which tier the agency fall</description>
        <label>Amount At Risk - To (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BSP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BSP</label>
        <referenceTo>AMS_Settlement_System__c</referenceTo>
        <relationshipLabel>BSP Attributes</relationshipLabel>
        <relationshipName>BSP_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Class_Type__c</fullName>
        <description>Location Class of the Account</description>
        <inlineHelpText>C-Cargo
D-Domestic
E-External Registrars
G-General Sales Agents
K-CATO
M-Members &amp; Airlines Sales Offices
N-NISI
O-SATO
P-Passenger
S-SSI
T-TIDS
V-Travel Service Intermediaries-TSI (USA Only) 
X-Handling Agents and Shipping Lines
J-Joint Vent</inlineHelpText>
        <label>Class Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>K</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>O</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>Q</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
                <value>
                    <fullName>J</fullName>
                </value>
                <value>
                    <fullName>W</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FS_Percentage__c</fullName>
        <description>Percentage of Financial Security</description>
        <label>% of Financial Security</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ISO_State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ISO State</label>
        <referenceTo>IATA_ISO_State__c</referenceTo>
        <relationshipLabel>BSP Attributes</relationshipLabel>
        <relationshipName>BSP_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Limit_Cash_Condition__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has Limit Cash Condition?</description>
        <label>Limit Cash Condition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_FA_Points__c</fullName>
        <description>Max Financial Assessment Points</description>
        <label>Max FA Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_FA_Points__c</fullName>
        <label>Min FA Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup field to theh BSP Attribute field (AMS Operation Code)</description>
        <label>Operation</label>
        <referenceTo>AMS_Operation__c</referenceTo>
        <relationshipLabel>BSP Attributes</relationshipLabel>
        <relationshipName>BSP_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RHC_Amnt_Calc_Type__c</fullName>
        <description>Remittance Holding Capacity Amount Calculation Type</description>
        <label>RHC Amount Calculation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Formula</fullName>
                </value>
                <value>
                    <fullName>Fixed Percentage</fullName>
                </value>
                <value>
                    <fullName>Tier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remittance_Frequency__c</fullName>
        <description>Account&apos;s Remittance Frequency</description>
        <label>Remittance Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ANG_Remittance_Frequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remittances_Per_Year__c</fullName>
        <description>Number of remittances per year to compute the most frequence value.</description>
        <formula>IF(BSP__r.Name &lt;&gt; &apos;BSP-CN&apos;, 

CASE( (TEXT(Remittance_Frequency__c)) , 

&apos;M&apos; , 12, 
&apos;F&apos; , 24, 
&apos;R&apos; , 48, 
&apos;V&apos; , 52, 
&apos;S&apos; , 73, 
&apos;B&apos; , 96, 
&apos;T&apos;, 105,
&apos;W&apos; , 48, 
&apos;D&apos; , 0, 
0) 

, CASE( (TEXT(Remittance_Frequency__c)), 
&apos;M&apos; , 12, 
&apos;F&apos; , 24, 
&apos;R&apos; , 48, 
&apos;V&apos; , 52, 
&apos;S&apos; , 73, 
&apos;B&apos; , 96,
&apos;T&apos;, 105, 
&apos;W&apos; , 48, 
&apos;D&apos;, 300, 
0) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remittances Per Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Risk_Status__c</fullName>
        <label>Risk Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ANG_Risk_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tier_RHC_Formula_Deduct_USD__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Used in Tier RHC: Indicates the amount to deduct from the formula</description>
        <inlineHelpText>Used in Tier RHC: Indicates the amount to deduct from the formula. Default value: 0</inlineHelpText>
        <label>Tier RHC Formula. Deduct (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_RHC_Formula_TopUp_USD__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Used in Tier RHC: Indicates the amount to add to the formula</description>
        <inlineHelpText>Used in Tier RHC: Indicates the amount to add to the formula. Default value: 0</inlineHelpText>
        <label>Tier RHC Formula TopUp (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_RHC_Formula__c</fullName>
        <formula>IF(text(RHC_Amnt_Calc_Type__c)=&apos;Tier&apos;,
  IF(Tier_RHC_Formula_TopUp_USD__c&gt;0, text(Tier_RHC_Formula_TopUp_USD__c) &amp; &apos; + &apos;, &apos;&apos;)
  &amp; text(Amount_At_Risk_Multiplier__c)
  &amp; &apos; x ( [Amount At Risk]&apos; 
  &amp; IF(Tier_RHC_Formula_Deduct_USD__c &gt;0, &apos; - &apos; &amp; text(Tier_RHC_Formula_Deduct_USD__c), &apos;&apos;)
  &amp; &apos; )&apos;
,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier RHC Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <description>The tier used in tiered RHC calculation</description>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <description>Unique identifier on the object to ensure no duplicates.</description>
        <externalId>true</externalId>
        <label>UniqueKey</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>create_SAAM_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used to specify if need to create a SAAM case when Tier changes</description>
        <inlineHelpText>used to specify if need to create a SAAM case when Tier changes</inlineHelpText>
        <label>create SAAM Case</label>
        <type>Checkbox</type>
    </fields>
    <label>BSP Attributes</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BSP Attributes</pluralLabel>
    <recordTypes>
        <fullName>Cash_Condition_Conf</fullName>
        <active>true</active>
        <label>Cash Condition Conf</label>
    </recordTypes>
    <recordTypes>
        <fullName>RHC_Amount_Conf</fullName>
        <active>true</active>
        <label>RHC Amount Conf</label>
    </recordTypes>
    <recordTypes>
        <fullName>Remittance_Frequency</fullName>
        <active>true</active>
        <label>Remittance Frequency</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BSP_mandatory_field</fullName>
        <active>true</active>
        <description>Prevent the creation of a BSP Attribute without a BSP value</description>
        <errorConditionFormula>AND( 
    OR(RecordType.DeveloperName = &apos;Cash_Condition_Conf&apos;, 
       RecordType.DeveloperName = &apos;RHC_Amount_Conf&apos;,
						 RecordType.DeveloperName = &apos;Remittance_Frequency&apos;)
, 
    ISBLANK(BSP__c)
)</errorConditionFormula>
        <errorMessage>BSP is a mandatory field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cash_Condition_FS_Percentage_Validation</fullName>
        <active>true</active>
        <description>Prevent creation of BSP Attribute with an empty Financial Security empty for Cash_Condition_Conf Record Type if the Limit_Cash_Condition__c  is selected</description>
        <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;Cash_Condition_Conf&apos;,
Limit_Cash_Condition__c = true,
 OR(
     ISBLANK(FS_Percentage__c), 
     FS_Percentage__c &lt; 0
 )
)</errorConditionFormula>
        <errorMessage>% of Financial Security is required and must be &gt;= 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RHC_Amount_Conf_FS_Percentage_validation</fullName>
        <active>true</active>
        <description>Prevent the creation of BSP Attribute &apos;RHC_Amount_Conf&apos; with a % of FS &lt; 0</description>
        <errorConditionFormula>AND(RecordType.DeveloperName = &apos;RHC_Amount_Conf&apos;, 
    FS_Percentage__c &lt; 0
)</errorConditionFormula>
        <errorMessage>% of Financial Security must be &gt;=0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RHC_Amount_Conf_FixedPercent_Blank_Value</fullName>
        <active>true</active>
        <description>Prevent the creation of BSP Attribute &apos;Cash_Condition_Conf&apos; RHC Amount Calculation type &quot;Fixed Percentage&quot; without having fields: Max_FA_Points__c, Min_FA_Points__c, FS_Percentage__c filled</description>
        <errorConditionFormula>AND(RecordType.DeveloperName = &apos;RHC_Amount_Conf&apos;, 
ISPICKVAL(RHC_Amnt_Calc_Type__c, &quot;Fixed Percentage&quot;), 
       OR(
          ISBLANK(Max_FA_Points__c),
          ISBLANK(Min_FA_Points__c),
          ISBLANK(FS_Percentage__c)
       ) 
)</errorConditionFormula>
        <errorMessage>For RHC Amount Calculation Type &apos;Fixed Percentage&apos;, the fields Min FA Points, Max FA Points and % of Financial Security are mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RHC_Amount_Conf_Formula_Blank_Values</fullName>
        <active>true</active>
        <description>Prevent the creation of BSP Attribute &apos;Cash_Condition_Conf&apos; RHC Amount Calculation type &quot;Formula&quot; having fields: Max_FA_Points__c, Min_FA_Points__c, FS_Percentage__c not blank</description>
        <errorConditionFormula>AND(RecordType.DeveloperName = &apos;RHC_Amount_Conf&apos;, 
    ISPICKVAL(RHC_Amnt_Calc_Type__c, &quot;Formula&quot;), 
       OR(
         !ISBLANK(Max_FA_Points__c),
         !ISBLANK(Min_FA_Points__c),
         !ISBLANK(FS_Percentage__c)
        )
)</errorConditionFormula>
        <errorMessage>For RHC Amount Calculation Type &apos;Formula&apos;, the fields Min FA Points, Max FA Points and % of Financial Security must be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RHC_Amount_Conf_Mandatory_RiskStatus</fullName>
        <active>true</active>
        <description>Prevent the creation of BSP Attribute &apos;RHC_Amount_Conf&apos; without Risk Status</description>
        <errorConditionFormula>AND(RecordType.DeveloperName = &apos;RHC_Amount_Conf&apos;,
    ISPICKVAL(Risk_Status__c, &apos;&apos;)
)</errorConditionFormula>
        <errorMessage>Risk Status is a mandatory field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RHC_Amount_Conf_Min_Max_Fa_Points</fullName>
        <active>true</active>
        <description>Prevent the creation of BSP Attribute &apos;RHC_Amount_Conf&apos;, with  Min_FA_Points__c &gt;= Max_FA_Points__c</description>
        <errorConditionFormula>AND(RecordType.DeveloperName = &apos;RHC_Amount_Conf&apos;, 
    Min_FA_Points__c &gt;= Max_FA_Points__c
)</errorConditionFormula>
        <errorMessage>Min FA Points must be lower than Max FA Points</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RHC_Amount_RHC_Amnt_Calc_Type_Mandatory</fullName>
        <active>true</active>
        <description>Prevent the creation of BSP Attribute &apos;RHC_Amount_Conf&apos; without RHC_Amnt_Calc_Type__c</description>
        <errorConditionFormula>AND(RecordType.DeveloperName = &apos;RHC_Amount_Conf&apos;, 
    ISPICKVAL(RHC_Amnt_Calc_Type__c, &apos;&apos;)
)</errorConditionFormula>
        <errorMessage>RHC Amount Calculation Type is a mandatory field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Remittance_Frequency_Required_Class_Type</fullName>
        <active>true</active>
        <description>Prevent the creation of BSP Attribute &apos;Remittance_Frequency&apos; without selecting the Class_Type fields</description>
        <errorConditionFormula>AND(RecordType.DeveloperName = &apos;Remittance_Frequency&apos;, 
        ISPICKVAL(Class_Type__c, &apos;&apos;)
)</errorConditionFormula>
        <errorMessage>Class Type is a required field for Record Type Remittance_Frequency</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Remittance_Frequency_Required_RF</fullName>
        <active>true</active>
        <description>Prevent the creation of BSP Attribute &apos;Remittance_Frequency&apos; without selecting the Remittance Frequency field</description>
        <errorConditionFormula>AND(RecordType.DeveloperName = &apos;Remittance_Frequency&apos;, 
ISPICKVAL(Remittance_Frequency__c, &apos;&apos;) 
)</errorConditionFormula>
        <errorMessage>Remittance Frequency is a required field for Record Type Remittance_Frequency</errorMessage>
    </validationRules>
</CustomObject>